--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,75 @@
         android:theme="@style/Theme.JetpackCompose"
         tools:targetApi="31">
         <activity
-            android:name=".AnimationEffectsActivity"
+            android:name=".activity.VerticalGridActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.HorizontalGridActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ContentSlotActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.IntrinsicHeightActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.BasicTextActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ConstraintLayoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ConstraintBarrierActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ConstraintChainStyleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.SelectionContainerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.TextClickableActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.TextFieldActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.LocalImageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.NetworkImageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.BasicUiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ImageColorFilterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ImageColorMatrixActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ImageBlurActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.GestureDetectActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.DragActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.TransformableActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.BroadcastReceiverActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.AnimationEffectsActivity"
             android:exported="false"
             android:screenOrientation="sensorLandscape"
             android:theme="@style/Theme.JetpackCompose.FullScreen" />
         <activity
-            android:name=".SecondActivity"
+            android:name=".activity.NativeEmbedActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
